fixed compilation of base-ide-impl module